force-app/main/default/objects/Account/fields/area__c.field-meta.xml
<CustomField>
    <fullName>area__c</fullName>
    <label>area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>