force-app/main/default/objects/Account/fields/Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information__c</fullName>
    <label>Customer Information</label>
    <length>250</length>
    <type>Text</type>
</CustomField>