force-app/main/default/objects/Account/fields/demo6__c.field-meta.xml
<CustomField>
    <fullName>demo6__c</fullName>
    <label>demo6</label>
    <length>10</length>
    <type>Text</type>
</CustomField>