force-app/main/default/objects/Account/fields/Relationships__c.field-meta.xml
<CustomField>
    <fullName>Relationships__c</fullName>
    <label>Relationships</label>
    <length>250</length>
    <type>Text</type>
</CustomField>