force-app/main/default/objects/Account/fields/Rollback_2_0__c.field-meta.xml
<CustomField>
    <fullName>Rollback_2_0__c</fullName>
    <label>Rollback 2.0</label>
    <length>250</length>
    <type>Text</type>
</CustomField>