force-app/main/default/objects/Account/fields/sainath__c.field-meta.xml
<CustomField>
    <fullName>sainath__c</fullName>
    <label>sainath</label>
    <length>10</length>
    <type>Text</type>
</CustomField>