force-app/main/default/objects/Account/fields/sampledemo1__c.field-meta.xml
<CustomField>
    <fullName>sampledemo1__c</fullName>
    <label>sampledemo1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>