force-app/main/default/objects/Account/fields/sampledemodev2__c.field-meta.xml
<CustomField>
    <fullName>sampledemodev2__c</fullName>
    <label>sampledemodev2</label>
    <type>TextArea</type>
</CustomField>