force-app/main/default/objects/Account/fields/sampledemoone__c.field-meta.xml
<CustomField>
    <fullName>sampledemoone__c</fullName>
    <label>sampledemoone</label>
    <type>TextArea</type>
</CustomField>