force-app/main/default/objects/Account/fields/sampletext__c.field-meta.xml
<CustomField>
    <fullName>sampletext__c</fullName>
    <label>sampletext</label>
    <length>12</length>
    <type>Text</type>
</CustomField>