force-app/main/default/objects/Account/fields/session1__c.field-meta.xml
<CustomField>
    <fullName>session1__c</fullName>
    <label>session1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>