force-app/main/default/objects/Account/fields/userid__c.field-meta.xml
<CustomField>
    <fullName>userid__c</fullName>
    <label>userid</label>
    <length>10</length>
    <type>Text</type>
</CustomField>